on login and signup event listeners

--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -11,4 +11,4 @@ block content
 		+field('Password', 'password', user.password)
 		+field('Confirm Password', 'password', user.password)
 		button(type='submit') Hit the Road!
-		a(href='/log-in') Already have an account? Log in here.
+		a(href='/users/log-in') Already have an account? Log in here.
