--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -1,2 +1,12 @@
 extends layout.pug 
+
+include utils.pug
+
 block content 
+	+validationErrorSummary(errors)
+	form(action='/login' method='post')
+		input(type='hidden' name='_csrf' value=csrfToken)
+		+field('Email Address', 'email', user.email)
+		+field('Password', 'password', user.password)
+		button(type='submit') Welcome Home
+		a(href='/users/sign-up') Don't have an account? Sign up here.
