Working on sign-up.js

--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -3,12 +3,15 @@ extends layout.pug
 include utils.pug
 
 block content 
-	+validationErrorSummary(errors)
-	form(action='/signup' method='post')
-		input(type='hidden' name='_csrf' value=csrfToken)
-		+field('Pen Name', 'pen_name', user.pen_name)
-		+field('Email Address', 'email', user.email)
-		+field('Password', 'password', user.password)
-		+field('Confirm Password', 'password', user.password)
-		button(type='submit') Hit the Road!
-		a(href='/users/log-in') Already have an account? Log in here.
+	div(class="errors-container")
+	h2 Sign Up 
+	form(class="sign-up-form")
+		+validationErrorSummary(errors)
+		form(action='/signup' method='post')
+			input(type='hidden' name='_csrf' value=csrfToken)
+			+field('Pen Name', 'pen_name', user.pen_name)
+			+field('Email Address', 'email', user.email)
+			+field('Password', 'password', user.password)
+			+field('Confirm Password', 'password', user.password)
+			button(type='submit') Hit the Road!
+			a(href='/users/log-in') Already have an account? Log in here.
