--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -5,11 +5,10 @@ include utils.pug
 block content 
 	div(class="errors-container")
 	h2 Log In 
-	form(class="log-in-form")
 		+validationErrorSummary(errors)
-		form(action='/login' method='post')
+		form(action='/users/login' method='post')
 			input(type='hidden' name='_csrf' value=csrfToken)
-			+field('Email Address', 'email', user.email)
-			+field('Password', 'password', user.password)
+			+field('Email Address', 'email', email)
+			+field('Password', 'password', null, 'password')
 			button(type='submit') Welcome Home
-			a(href='/users/sign-up') Don't have an account? Sign up here.
+			a(href='/users/signup') Don't have an account? Sign up here.
