completed authorization for users

--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -13,6 +13,6 @@ block content
 			+field('Password', 'password', user.password, 'password')
 			+field('Confirm Password', 'confirmPassword', '', 'password')
 			button(type='submit') Hit the Road!
-			a(href='/' class='btn btn-primary') Cancel
+			a(href='/newsfeed' class='btn btn-primary') Cancel
 		div 
 			a(href='/users/login') Already have an account? Log in here.
