Updated some pug  planning comments in file commiting for group use

--- a/views/articles.pug
+++ b/views/articles.pug
@@ -1,4 +1,5 @@
 extends layout.pug 
 
 block content
-	h2 Welcome to our articles page!
+	h2 Welcome to our articles page! THIS IS OUR NEWS FEED 
+	h3 ADD THE NAV BAR HERE. 
