--- a/views/create-article.pug
+++ b/views/create-article.pug
@@ -1,4 +1,4 @@
 extends layout.pug 
 
 block content
-	h2 Write a new travel story!
+	h2 Write a new travel story! THIS IS WHERE WE CREATE AN ARTICLE
