Wroite delete route and add newsfeed pug skeleton

--- a/views/article.pug
+++ b/views/article.pug
@@ -1,4 +1,4 @@
 extends layout.pug 
 
 block content
-	h2 YOU ARE VIEWING A SINGLE ARTICLE. 
+	h2 Write a new travel story! THIS IS WHERE WE CREATE AN ARTICLE
