--- a/views/newsfeed.pug
+++ b/views/newsfeed.pug
@@ -1,3 +1,22 @@
 extends layout.pug 
 block content 
-  h1 WELCOME TO OUR NEWSFEED
+  div(class="nav-bar-container")
+    //- INDIVIDUAL NAME PROFILE CLICKABLE:
+    //- a(href="" class="")
+    //- FOLLOWERS CLICKABLE??:
+    //- a(href="" class="")
+    //- a(href in a BUTTON/DROPDOWN?? to go to user's personal profile)
+    //- a(href='/profle???' class="")
+    //-   button(type="button" class="profile-button") PROFILE
+    a(href='/newsfeed')
+      button(type="button" class="home-button") GO HOME
+  div(class="top-articles-container")
+    div(class="top-story-container")
+    div(class='more-articles-container')
+  div(class="topics-container")
+    div(class="top-bonus-container")
+  div(class="horizontal-divider")
+  div(class="bottom-articles-container")
+  div(class="bottom-bonus-container")
+
+    
