--- a/views/newsfeed.pug
+++ b/views/newsfeed.pug
@@ -17,9 +17,9 @@ block content
           tr
             th(scope='col') Top Travelogues
         tbody
-          each article in articles
-            tr
-              td= article.title
+          //- each article in articles
+          //-   tr
+          //-     td= article.title
               //- INSERT PICTURE HERE - ^^ WORKS IF ARTICLE LINES ARE COMMENTED OUT
     div(class='more-articles-container')
       //- ul
