updates for tomorrow

--- a/views/gatewall.pug
+++ b/views/gatewall.pug
@@ -5,3 +5,5 @@ block content
 		button(type="button") MAKE PASSPORT
 	a(href='/users/login')
 		button(type="button") USE PASSPORT
+	a(href='/users/demo')
+		button(type="button") DEMO USER 
