--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,7 @@ html
       block head
         title="Express Starter App"
         link(rel='stylesheet' href='/stylesheets/reset.css')
+        //- link(rel='stylesheet' href='/stylesheets/navbar.css')
   body
+    div(class="nav-bar nav-link")   
     block content
