Complete create article pug

--- a/views/create-article.pug
+++ b/views/create-article.pug
@@ -1,4 +1,23 @@
-extends layout.pug 
+extends layout.pug
+
+include utils.pug
+
+append head 
+	link(rel='stylesheet' href='/stylesheets/create.css')
+	link(rel='stylesheet' href='/stylesheets/navbar.css')
+	script(type='text/javascript' src='/javascripts/navbar.js')
 
 block content
-	h2 Write a new travel story! THIS IS WHERE WE CREATE AN ARTICLE
+	.nav__container
+		div(class="nav-link")
+			a(class="nav-profile" href=`/profile${user.id}`) USER NAME
+			a(href="/newsfeed") HOME
+	.form(action="/articles/create" method="post" class="articles-create__container")
+		input(type="hidden" name="_csrf" value=csrfToken)
+		+fieldNoLabel('articles-create__title', 'title', article.title, 'text', 'Title...')
+		+fieldNoLabel('articles-create__content', 'content', article.content, 'textarea', 'Tell your story here...')
+		+fieldNoLabel('articles-create__image', 'imageSrc', article.imageSrc, 'url', 'Share your photo here...')
+		.form__button 
+			a(href="/newsfeed") CANCEL 
+			button(type="submit") PUBLISH
+
