--- a/views/profile.pug
+++ b/views/profile.pug
@@ -10,4 +10,7 @@ block content
   //- a(href in a BUTTON/DROPDOWN?? to go to user's personal profile)
   //- a(href='/profle???' class="")
   a(href=`/newsfeed`) Article Home
-  //-   button(type="button" class="profile-button") PROFILE
+  a(href=`/profiles/${loggedIn}`) My Profile
+  a(href=`/profiles/logout`) Log Out
+
+    //- button(type="button" class="profile-button") PROFILE
