--- a/views/profile.pug
+++ b/views/profile.pug
@@ -11,6 +11,8 @@ block content
   //- a(href='/profle???' class="")
   a(href=`/newsfeed`) Article Home
   a(href=`/profiles/${loggedIn}`) My Profile
-  a(href=`/profiles/logout`) Log Out
+  form(action="/profiles/logout" method="post")
+    button(type="submit") Log Out
+
 
     //- button(type="button" class="profile-button") PROFILE
