--- a/views/penPals.pug
+++ b/views/penPals.pug
@@ -1,6 +1,19 @@
 extends layout.pug 
 
-block content 
+block content
+  div(class="nav-bar-container")
+  //- INDIVIDUAL NAME PROFILE CLICKABLE:
+  a(href=`/profiles/${user.id}` class="user-name-link")= user.pen_name
+  //- FOLLOWERS CLICKABLE??:
+
+  a(href=`/profiles/${user.id}/penpals` class="pen-pal-link")= `${penPalCount} Pen Pals`
+  //- a(href in a BUTTON/DROPDOWN?? to go to user's personal profile)
+  //- a(href='/profle???' class="")
+  a(href=`/newsfeed`) Article Home
+  a(href=`/profiles/${loggedIn}`) My Profile
+  form(action="/profiles/logout" method="post")
+    button(type="submit") Log Out
+
   h1 Am I working
   div(class="pen-pal-list")
     ul 
