last in commits

--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -89,7 +89,7 @@ outline: 3px solid rgb(170, 188, 216);
 
 .cancel-button {
   margin: 7px 20px 0 10px;
-  color: #645A5A;
+  color: black;
   font-size: 14px;
 }
 
