completed newsfeed css/pug

--- a/public/stylesheets/single-article.css
+++ b/public/stylesheets/single-article.css
@@ -11,10 +11,10 @@ body{
   height: 40px;
 } */
 
-.article-div{
+/* .article-div{
   display: flex;
   justify-content: center;
-}
+} */
 
 .article__container{
   width: 90%;
