--- a/views/newsfeed.pug
+++ b/views/newsfeed.pug
@@ -15,7 +15,8 @@ block content
 	.article__container-newsfeed 
 		each article in articles
 			.article__container-image
-				img#articleImg(src=article.imageSrc)
+				a(article__container-image-link href=`/articles/${article.id}`)
+					img#articleImg(src=article.imageSrc)
 			div(class='article__title')
 				a(class='article__title-link' href=`/articles/${article.id}`)= article.title
 			div(class='article__user')
