--- a/views/single-article.pug
+++ b/views/single-article.pug
@@ -26,8 +26,14 @@ block content
 			.article__comments-icon
 				img#commentImg(src="https://cdn2.iconfinder.com/data/icons/contact-us-50/512/Comment_message_message_reply_communication_conversation_emoji_chat-512.png")
 				//- number of comments add here
-			.article__stamps-icon
-				img#stampImg(src="https://cdn3.iconfinder.com/data/icons/office-269/32/Office_Expanded_32pxl_Stamps-512.png")
+			.article__container-stamps-icon
+				a(href=`https://cdn3.iconfinder.com/data/icons/office-269/32/Office_Expanded_32pxl_Stamps-512.png` class='stampImg')= `${stampNum} Stamps`
+				//- img#stampImg(src="https://cdn3.iconfinder.com/data/icons/office-269/32/Office_Expanded_32pxl_Stamps-512.png")
+				//- button#stampButton(class="score") Stamp
+				//- if isStamped
+				//- 	button#stampButton(type='submit') Stamped
+				//- else 
+				//- 	button#stampButton(type='submit') Stamp
 				//- number of stamps add here
 		.form
 			form(action=`/articles/${article.id}` method='post')
