--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,36 +1,63 @@
-h2{
-  color:red
-}
 
-/* .nav-logo{
-  margin: 0 auto;
-  display: block;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: flex-start;
-} */
 
 .nav__container {
-  background-color: rgb(170, 188, 216);
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 40px;
-  height: 70px;
+  background-color: #CB997E;
+  display: flex;
+  justify-content: space-between;
+  height: 15vh;
+  width: 100vw;
   padding: 0 38px;
-  box-shadow: black;
+  position: fixed;
+  top: 0;
+  border-bottom: 4px solid black;
 }
 
-.nav__container > * {
+.nav-left-container,
+.nav-right-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* border: 2px solid red; */
+  width: 33vw;
+}
+
+.logo{
+  margin: 0 auto;
+  display: block;
+  width: 70%;
+}
+.nav-middle-container {
   display: flex;
   align-items: center;
 }
 
-.nav__logo {
-  grid-column: 1 / 2;
+.nav-item {
+  font-size: 1.3rem;
+  text-decoration: none;
+  border: none;
+  padding: 5px 10px;
+  margin: 0 10px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  border: 2px solid rgba(0,0,0,0);
+  white-space: nowrap;
 }
 
+.nav-item:hover {
+  border: 2px solid black;
+  background-color: #7BA5B8; 
+}
 
-.footer__container{
-  background-color: aquamarine;
+button {
+   border:none;
+   height: 100%;
+   width: 100%;
+   background-color:transparent;
+   outline:none;
+   font-family: inherit;
+   font-size: inherit;
+}
+
+button:hover {
+  cursor: pointer;
 }
