--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -18,12 +18,13 @@ body {
     background-color: #7CA5B8;
     display: flex;
     justify-content: center;
+    border-right: 4px solid black;
 }
 #profile-pic {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    margin: 60px 0;
+    margin: 60px 0 30px 0;
 }
 
 .user-article-container {
@@ -49,6 +50,11 @@ body {
     font-size: 2rem;
     font-weight: bold;
     text-decoration: none;
+    transition: all .2s ease-in-out;
+}
+
+.article-title:hover {
+    color: #735D78;
 }
 
 .article-content {
@@ -67,4 +73,10 @@ li {
 
 li {
     list-style-type: none;
+}
+.comment-article-link {
+    display: flex;
+}
+.commentImg {
+    width: 20px;
 }
