Continue work on profile page

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -3,33 +3,44 @@
 .nav__container {
   background-color: #CB997E;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
   height: 15vh;
   width: 100vw;
   padding: 0 38px;
   position: fixed;
   top: 0;
-  border-bottom: 4px solid black;
+  border-bottom: 2px solid black;
+  /* box-shadow:  2px 6px 4px 0px rgba(0,0,0,0.7); */
+  /* border: solid 5px red; */
 }
 
-.nav-left-container,
-.nav-right-container {
+/* .nav-left-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  /* border: 2px solid red; */
+  border: 2px solid red;
   width: 33vw;
 }
 
+.nav-right-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border: 2px solid red;
+  width: 33vw;
+} */
+
 .logo{
   margin: 0 auto;
-  display: block;
-  width: 70%;
+  /* display: block; */
+  /* width: 50%; */
+  width: 600px;
 }
-.nav-middle-container {
+/* .nav-middle-container {
   display: flex;
   align-items: center;
-}
+} */
 
 .nav-item {
   font-size: 1.3rem;
@@ -39,7 +50,7 @@
   margin: 0 10px;
   border-radius: 10px;
   box-sizing: border-box;
-  border: 2px solid rgba(0,0,0,0);
+  border: 2px solid rgba(0,0,0,1);
   white-space: nowrap;
 }
 
@@ -60,4 +71,13 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+  .logo {
+    display: none;
+  }
+  /* .nav__container {
+    flex-direction: column;
+  } */
 }
