--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -42,27 +42,32 @@
   align-items: center;
 } */
 
+
 .nav-item {
   font-size: 1.3rem;
   text-decoration: none;
   border: none;
-  padding: 5px 10px;
+  padding: 0 4px 4px 4px;
   margin: 0 10px;
   border-radius: 10px;
   box-sizing: border-box;
-  border: 2px solid rgba(0,0,0,1);
+  border: 1px solid rgba(0,0,0,0);
   white-space: nowrap;
+  text-align: center;
 }
 
 .nav-item:hover {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   background-color: #7BA5B8; 
+  border: 1px solid black;
 }
 
 button {
    border:none;
    height: 100%;
    width: 100%;
+   padding: 0;
+   margin: 0;
    background-color:transparent;
    outline:none;
    font-family: inherit;
@@ -77,7 +82,4 @@ button:hover {
   .logo {
     display: none;
   }
-  /* .nav__container {
-    flex-direction: column;
-  } */
 }
