--- a/public/stylesheets/newsfeed.css
+++ b/public/stylesheets/newsfeed.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
 body{
   box-sizing: border-box;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   background-color: #F7F7F7;
 }
 
 .article__container-newsfeed{
   width: 90%;
-  margin: 0 auto;
+  margin: 15vh auto 0;
   flex-direction: column;
-  /* border: solid 5px red; */
   max-width: 700px;
   justify-content: center;
   padding: 30px;
@@ -17,22 +18,27 @@ body{
 .article__title-link{
   padding-top: 5px;
   text-align: center;
-  font-size: large;
+  font-size: 1.6rem;
   font-weight: bold;
-  text-shadow: 1px 1px 1px rgba(161, 170, 169, .9);
+  /* text-shadow: 1px 1px 1px rgba(161, 170, 169, .9); */
   padding-bottom: 5px;
   display: flex;
   justify-content: flex-start;
+  text-decoration: none;
 }
 
 .article__title-link:hover{
   color: royalblue;
 }
 
-.article__user-link{
-  font-size: small;
-  text-shadow: 1px 1px 1px rgba(105, 105, 105, .4);
-}
+.article__user-link,
+.article__user
+{
+  font-family: sans-serif;
+  /* font-size: 1.1rem; */
+  /* text-shadow: 1px 1px 1px rgba(105, 105, 105, .4); */
+  /* text-decoration: none; */
+} 
 
 .article__user-link:hover{
   color: royalblue
