--- a/views/gatewall.pug
+++ b/views/gatewall.pug
@@ -4,12 +4,12 @@ include utils.pug
 
 append head
 	link(rel='stylesheet' href='/stylesheets/gatewall.css')
-	link(rel='stylesheet' href='/stylesheets/navbar.css')
 	script(type='text/javascript' src='/javascripts/navbar.js')
 	
 block content
 	div(id="gatewall-container")
 		div(id="gatewall-overlay")
+			img(src="/images/logo-thin.png" id="gatewall-logo")
 			div(id="gatewall-btn-container")
 				a(href='/users/signup')
 					button(type="button" id="make-passport-btn") MAKE PASSPORT
